--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,700&display=swap");
+@font-face {
+  font-family: "Clash";
+  src: local("ClashRegular"),
+    url("./assets/fonts/ClashDisplay-Regular.woff") format("woff");
+}
+@font-face {
+  font-family: "ClashMid";
+  src: local("ClashMid"),
+    url("./assets/fonts/ClashDisplay-Medium.woff") format("woff");
+}
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb {
+  background: #194d4a;
+  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  height: 30px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #194d4acc;
+}
+* {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.heading {
+  font-family: "Clash";
+}
+.headingmid {
+  font-family: "ClashMid";
+}
+*,
+p {
+  font-family: "DM Sans", sans-serif;
+}
+.content,
+.overlay {
+  grid-area: 1 / 1;
+}
+.artist {
+  box-shadow: 20px -30px 0px 0px rgba(255, 255, 25, 1) !important;
+}
+.active {
+  background-color: white;
+  color: black;
 }
