--- a/src/index.css
+++ b/src/index.css
@@ -22,16 +22,16 @@
   }
 }
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 2px;
 }
 ::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 5px;
+  background: black;
+  border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb {
   background: #194d4a;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
+  border-radius: 10px;
   height: 30px;
 }
 ::-webkit-scrollbar-thumb:hover {
@@ -73,4 +73,7 @@ p {
 .active {
   background-color: white;
   color: black;
+}
+.scrollz{
+  scrollbar-width: 2px;
 }
