Update UI and add external URLs to artist and track components
* Updated the background color and text color in App.js
* Added target blank and rel noreferrer attributes to Artist component for opening artist page in a new tab
* Added trackUrl and artistUrl props to Track and Artist components
* Added external\_urls.spotify to Artist component in Artists.jsx and Track component in Tracks.jsx
* Commented out some console.log statements and added a new class for the button in index.css
* Commented out the CurrentlyPlaying and Recent components in Render.jsx
* Added a new class for the button in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -67,9 +67,9 @@ p {
 .overlay {
   grid-area: 1 / 1;
 }
-.artist {
+/* .artist {
   box-shadow: 20px -30px 0px 0px rgba(255, 255, 25, 1) !important;
-}
+} */
 .active {
   background-color: white;
   color: black;
@@ -86,8 +86,17 @@ p {
     display: none !important;
   }
 }
-
-.rec{
+.rec {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+}
+.btn {
+  box-shadow: 7px 7px 0px 0px rgb(250, 250, 250);
+}
+.btn:hover {
+  box-shadow: none;
+}
+
+.artist:hover .artist-img {
+  scale: 1.1;
 }
