"Update Artist and Track components, adjust styling and add hover effects."
This commit includes changes to the Artist and Track components in the `components` directory. The Artist component's class name has been updated, and a hover effect has been added to the image. The Track component's layout and styling have been adjusted, and a new hover effect has been added to the artist name. The `index.css` file has also been updated to include new hover styles and hide the scrollbar. Lastly, the `Tracks.jsx` file has a console log statement added for debugging purposes.

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
   }
 }
 ::-webkit-scrollbar {
+  display: none;
   width: 2px;
 }
 ::-webkit-scrollbar-track {
@@ -97,6 +98,11 @@ p {
   box-shadow: none;
 }
 
-.artist:hover .artist-img {
-  scale: 1.1;
+.artistnm:hover .artist-img {
+  scale: 1.05;
+}
+
+.artistnm:hover .arx {
+  background-color: rgba(0, 0, 0, 0.2) !important;
+  
 }
