--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,8 @@ p {
   scale: 1.05;
 }
 
-.artistnm:hover .arx {
-  background-color: rgba(0, 0, 0, 0.2) !important;
-  
+@media (min-width: 768px) {
+  .artistnm:hover .arx {
+    background-color: rgba(0, 0, 0, 0.2) !important;
+  }
 }
